--- a/assets/css/app.module.css
+++ b/assets/css/app.module.css
@@ -11,6 +11,7 @@
   justify-content: space-between;
   border-bottom: 1px solid #dee2e6;
 }
+
 .tilbar div.btnapp {
   display: flex;
   flex-direction: row;
@@ -18,6 +19,7 @@
   justify-content: flex-end;
   width: 120px;
 }
+
 .tilbar div.btnapp button {
   background: #fff;
   height: 35px;
@@ -28,28 +30,36 @@
   align-items: center;
   justify-content: center;
 }
+
 .tilbar div.btnapp button:hover {
   background: rgba(33, 37, 41, 0.1);
 }
+
 .tilbar div.btnapp button:last-child:hover {
   background: #bf1f11;
   color: #fff;
 }
+
 .tilbar div.btnapp button i {
   color: #212529;
 }
+
 .tilbar div.btnapp button i.bi-square {
   font-size: 12px;
 }
+
 .tilbar div.btnapp button i.bi-back {
   font-size: 14px;
 }
+
 .tilbar div.btnapp button i.bi-dash-lg {
   font-size: 16px;
 }
+
 .tilbar div.btnapp button i.bi-x {
   font-size: 20px;
 }
+
 .tilbar .title {
   display: flex;
   flex-direction: row;
@@ -57,11 +67,13 @@
   justify-content: flex-start;
   width: calc(100% - 120px);
 }
+
 .tilbar .title .img {
   height: 20px;
   background: #fff;
   padding: 2px;
 }
+
 .tilbar .title h1 {
   color: #212529;
   font-weight: 500;
@@ -87,21 +99,25 @@
   padding: 0 10px;
   bottom: 10px;
 }
+
 .app .main .appTitle {
   position: absolute;
   top: 15px;
   left: 10px;
 }
+
 .app .main .appTitle h2 {
   font-weight: 600;
   font-size: 18px;
 }
+
 .app .main .header {
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: flex-end;
 }
+
 .app .main .header div {
   display: flex;
   flex-direction: row;
@@ -116,12 +132,15 @@
   border-right: 1px solid #dee2e6;
   box-shadow: 0 0.07rem 1px 0 rgba(0, 0, 0, 0.4);
 }
+
 .app .main .header div:hover {
   background: #dee2e6;
 }
+
 .app .main .header div:hover:nth-child(2) span {
   border-color: #dee2e6;
 }
+
 .app .main .header div:nth-child(1) {
   width: 45px;
   justify-content: center;
@@ -129,9 +148,11 @@
   position: relative;
   cursor: pointer;
 }
+
 .app .main .header div:nth-child(1) i {
   font-size: 20px;
 }
+
 .app .main .header div:nth-child(1) span {
   position: absolute;
   width: 7px;
@@ -144,6 +165,7 @@
   margin-left: 20px;
   margin-top: 10px;
 }
+
 .app .main .header div h2 {
   display: flex;
   flex-direction: column;
@@ -151,9 +173,11 @@
   font-size: 13px;
   font-weight: 600;
 }
+
 .app .main .header div h2 span {
   font-size: 11px;
 }
+
 .app .main .header img {
   width: 35px;
   margin-right: 4px;
@@ -162,41 +186,58 @@
 
 .page {
   width: 300px;
-  background: red;
   padding: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
+.page h1 {
+  font-size: 16px;
+  font-weight: 500;
+}
+
 .page input {
   border: 1px solid #ddd;
   background: #fff;
   border-radius: 4px;
-  padding: 6px 8px;
+  padding: 0 8px;
+  height: 35px;
   margin: 10px 0;
-  width: calc(100% - (126px))
+  width: calc(174px - (16px));
 }
 
 .page button {
   background: #6a00f4;
   color: #fff;
-  padding: 6px 0;
-  margin: 0 8px;
+  height: 35px;
+  margin: 0;
+  margin-left: 8px;
   border-radius: 4px;
   font-weight: 500;
   width: 90px;
 }
 
-.page .comp {
-  width: 100%;
-  background: yellow
+.comp {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  height: 35px;
+  margin-bottom: 8px;
 }
 
 .comp div {
-  width: 100%;
+  padding: 0 8px;
+  width: calc(174px - (16px));
+  display: flex;
+  align-items: center;
+  background: #dee2e6;
+  border-radius: 4px;
+  font-weight: 500;
+  height: 100%;
 }
 
 .page span {
-  width: calc(100% - (126px));
+  font-weight: 500;
 }
